# hamiltonian-implicit-differentiation

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  experiment1.py  experiment1_plot.py  experiment2.py  experiment2_plot.py  experiment3.py  experiment4.py  experiment5.py  experiment6.py  experiment7.py  experiment8.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: appendix_reproduction.md  experiments.md  plot_style.md  reproducibility.md
experiment5/: exp0D_summary.txt  runs0D_inner_budget_metrics.csv  table0D_inner_budget_summary.csv  table0D_inner_budget_summary.tex
experiments/: _exp01_core_demo_impl.py  _exp02_budget_efficiency_impl.py  exp01_id_vs_fd_core_demo.py  exp01_id_vs_fd_core_demo_refined_plots.py  exp02_budget_efficiency_multiseed.py  exp02_budget_efficiency_t20_variant.py  exp03_readout_realism_best_mode.py  exp04_robustness_sweep_periodic_k.py  exp05_inner_budget_ablation.py  exp06_edgewise_lambda_vector.py  exp06_graphclass_regime_heatmap.py  exp07_multi_dimensional_outer_control.py  exp07_vqe_vs_qaoa_readout_bridge.py  exp08_id_vs_fd_np_graphclass_heatmap.py  exp08_vqe_vs_qaoa_readout_bridge.py  experiment1.py  experiment1_plot.py  experiment2.py  experiment2_plot.py  experiment3.py  experiment4.py  experiment5.py  experiment6.py  experiment7.py  experiment8.py  plot_style.py
out_exp0A/: table0A_summary.csv  table0A_summary.tex
out_exp1_readout/: exp1_readout_summary.txt  runs1_readout_metrics.csv  table1_readout_summary.csv  table1_readout_summary.tex
out_exp2C_readout_bridge/: exp2C_results.csv  exp2C_summary.txt
output/: README.md
output/exp01/: SUMMARY.txt
output/exp02/: SUMMARY.txt  table2_summary.csv  table2_summary.tex
output/exp03/: SUMMARY.txt
output/exp04/: SUMMARY.txt  runs4_robustness_metrics.csv  table4_summary.csv  table4_summary.tex
output/exp05/: SUMMARY.txt  runs5_inner_budget_metrics.csv  table5_summary.csv  table5_summary.tex
output/exp06/: SUMMARY.txt  runs6_graphclass_metrics.csv  table6_graphclass_summary.csv
output/exp07/: SUMMARY.txt  runs7_edgewise_metrics.csv  table7_edgewise_summary.csv  table7_edgewise_summary.tex
tests/: test_experiment_defaults.py  test_experiment_entrypoints.py  test_families.py  test_graphs.py  test_io.py  test_maxcut.py  test_metrics.py  test_plotting.py  test_qaoa.py  test_seeds.py  test_simulator.py  test_spsa.py
(+43 files in other folders)
