[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paramham"
version = "0.3.0"
description = "Parametrized Hamiltonians for implicit differentiation in bilevel Max-Cut optimization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Markus" }]
keywords = [
    "quantum computing",
    "variational quantum eigensolver",
    "qaoa",
    "max-cut",
    "implicit differentiation",
    "bilevel optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/eybmits/parameterized-hamiltonians-id"
Repository = "https://github.com/eybmits/parameterized-hamiltonians-id"
Issues = "https://github.com/eybmits/parameterized-hamiltonians-id/issues"

[project.scripts]
paramham-reproduce = "paramham.reproduce:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "build>=1.2",
    "twine>=5.1",
]
plot = [
    "matplotlib>=3.7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
